--- a/MarvelHeroesLab/App.config
+++ b/MarvelHeroesLab/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <connectionStrings>
+    <add name="MarvelDbConnectionString" connectionString="Data Source=Marvel.db;Version=3;"/>
+  </connectionStrings>
 </configuration>
