--- a/MarvelHeroesLabTests/packages.config
+++ b/MarvelHeroesLabTests/packages.config
@@ -3,6 +3,10 @@
   <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.101.0" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.101.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core.MSIL" version="1.0.101.0" targetFramework="net45" />
   <package id="System.Data.SQLite.EF6" version="1.0.101.0" targetFramework="net45" />
   <package id="System.Data.SQLite.Linq" version="1.0.101.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.MSIL" version="1.0.101.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.x64" version="1.0.101.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.x86" version="1.0.101.0" targetFramework="net45" />
 </packages>
